specs/blueprints/errors/parsing/escape_without_key.eno
# An escape sequence without a key

-- input
` `
-- input

## ParseError

-- text
The escape sequence in line 1 specifies no key.
-- text

-- snippet
   Line | Content
 >    1 | ` `
-- snippet

selection: [0,1] => [0,2]
